# financial-statements

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: run-ci.yaml
coverage_artifacts/: coverage.xml
data_loader/: file_loader.py  file_loader_test.py
src/data_loader/: file_loader.py
src/google_sheets/: google_sheets_api.py
src/transformer/: google_sheet_entry.py
tests/: file_loader_test.py  google_sheet_entry_test.py  google_sheets_api_test.py
