[tool.poetry]
description = "API to load data to google sheets"
authors = ["Alexandros Vamvakaris-Skrivanos <vamvas@outlook.com.gr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
flake8 = "^7.1.1"
mypy = "^1.11.1"

[tool.poetry.group.precommithooks.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
