[tool.poetry]
name = "financial_statements"
description = "API to load data to google sheets"
authors = ["Alexandros Vamvakaris-Skrivanos <vamvas@outlook.com.gr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
gspread = "^6.1.2"
gspread-formatting = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
mypy = "^1.11.1"
flake8 = "^7.1.1"
pandas-stubs = "^2.2.2.240807"
coverage-badge = "^1.1.2"

[tool.poetry.group.precommithooks.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
